# SSJ_AGV

./: .ycm_extra_conf.py  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/amcl/: AMCLConfig.h
devel/include/base_local_planner/: Position2DInt.h
devel/include/console/: serial_data.h
devel/include/control_toolbox/: ParametersConfig.h  SetPidGainsRequest.h  SetPidGainsResponse.h
devel/include/costmap_2d/: InflationPluginConfig.h  ObstaclePluginConfig.h  VoxelGrid.h  VoxelPluginConfig.h
devel/include/dwa_local_planner/: DWAPlannerConfig.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/include/hokuyo_node/: HokuyoConfig.h
devel/include/logical_core/: SetGoal.h  SetGoalRequest.h  SetGoalResponse.h
devel/include/move_base_msgs/: MoveBaseAction.h  MoveBaseActionFeedback.h  MoveBaseActionGoal.h  MoveBaseActionResult.h  MoveBaseFeedback.h  MoveBaseGoal.h  MoveBaseResult.h
devel/include/naoqi_driver_py/: NaoqiSpeechConfig.h
devel/include/naoqi_sensors_py/: NaoqiCameraConfig.h  NaoqiMicrophoneConfig.h
devel/include/odometry/: car_speed.h
devel/include/pal_behaviour_msgs/: BehaviourArgument.h  BehaviourEvent.h  BehaviourEventRequest.h  BehaviourEventResponse.h  BehaviourTaskAction.h  BehaviourTaskActionFeedback.h  BehaviourTaskActionGoal.h  BehaviourTaskActionResult.h  BehaviourTaskFeedback.h  BehaviourTaskGoal.h  BehaviourTaskResult.h  PresentationAction.h  PresentationActionFeedback.h  PresentationActionGoal.h  PresentationActionResult.h  PresentationFeedback.h  PresentationGoal.h  PresentationResult.h
devel/include/pal_common_msgs/: DisableAction.h  DisableActionFeedback.h  DisableActionGoal.h  DisableActionResult.h  DisableFeedback.h  DisableGoal.h  DisableResult.h  EmptyAction.h  EmptyActionFeedback.h  EmptyActionGoal.h  EmptyActionResult.h  EmptyFeedback.h  EmptyGoal.h  EmptyResult.h  JointCurrent.h
devel/include/pal_control_msgs/: ActuatorCurrentLimit.h  CurrentLimit.h  CurrentLimitRequest.h  CurrentLimitResponse.h  MotionManagerAction.h  MotionManagerActionFeedback.h  MotionManagerActionGoal.h  MotionManagerActionResult.h  MotionManagerFeedback.h  MotionManagerGoal.h  MotionManagerResult.h
devel/include/pal_detection_msgs/: AddTexturedObject.h  AddTexturedObjectRequest.h  AddTexturedObjectResponse.h  Detection2d.h  Detections2d.h  FaceDetection.h  FaceDetections.h  LegDetections.h  PersonDetection.h  PersonDetections.h  RecognizedActions.h  Recognizer.h  RecognizerRequest.h  RecognizerResponse.h  RotatedDetection2d.h  SelectTexturedObject.h  SelectTexturedObjectRequest.h  SelectTexturedObjectResponse.h  SetDatabase.h  SetDatabaseRequest.h  SetDatabaseResponse.h  StartEnrollment.h  StartEnrollmentRequest.h  StartEnrollmentResponse.h  (+5 more)
msc/19276ba6ac6a3d512dd4d1f008a4fff4/: urec.data
src/: .rosinstall  autocar  list.yaml  tags
src/car_2d_nav/: CMakeLists.txt
src/console/: CMakeLists.txt
src/console/src/: console.cpp
src/logical_core/: CMakeLists.txt  package.xml
src/logical_core/src/: logical_core.cpp  logical_core.h  logical_core_node.cpp
src/logical_core/srv/: SetGoal.srv
src/my_car/: CMakeLists.txt
src/odometry/: CMakeLists.txt
src/odometry/include/odometry/: vel2odom.h
src/odometry/src/: vel2odom.cpp  vel2odom_node.cpp
src/param_manager/: autocar_params.xml
src/serial_comm/: CMakeLists.txt
src/serial_comm/include/: comm_read.h  comm_write.h  serial_param.h
src/serial_comm/msg/: car_speed.msg  pan_data.msg  serial_data.msg
src/serial_comm/src/: comm_read.cpp  comm_read_node.cpp  comm_write.cpp  comm_write_node.cpp  serial_param.cpp
src/test/: CMakeLists.txt  package.xml
src/tf_tree/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  tf_broadcaster
src/tf_tree/include/tf_tree/: tf_factory.h  tf_param.h
src/tf_tree/src/: tf_broadcaster.cpp  tf_factory.cpp  tf_param.cpp
src/tts_voice/: CMakeLists.txt  package.xml
(+1031 files in other folders)
